--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,10 +1,12 @@
 nav {
-    position: absolute;
+    position: fixed;
     width: 100%;
     padding: 1rem;
+    top: 1rem;
     img {
         width: 10rem;
         height: auto;
+        cursor: pointer;
         object-fit: contain;
         position: absolute;
     }
@@ -14,6 +16,7 @@ nav {
 }
 
 .hamburger-menu {
+    cursor: pointer;
     position: absolute;
     right: 1rem;
     top: 1.4rem;
