--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,12 +10,67 @@ html {
     font-family: 'Saira', sans-serif;
 }
 
-header {
+.container-home {
     background: $yellow;
     height: 100vh;
     max-height: 1080px;
     width: 100%;
+    display: grid;
+    grid-template-rows: 1.35fr repeat(8, 1fr);
+    grid-template-columns: repeat(6, 1fr);
 }
+
+.platform-select {
+    grid-column: 1 / span 6;
+    grid-row: 2/3;
+    //background-color: black;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    max-width: 100vw;
+    overflow: hidden;
+    .platform {
+        width: 8rem;
+        position: absolute;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        &.ps4 {
+            background-image: url('../../Design\ Assets/logo-ps4.svg');
+        }
+        &.xbox {
+            background-image: url('../../Design\ Assets/logo-xboxone.svg');
+        }
+        &.pc {
+            background-image: url('../../Design\ Assets/logo-pc.svg');
+            background-size: 3rem;
+        }
+        &.animation-enter {
+            transform: translateX(50vw);
+        }
+        &.animation-exit {
+            transform: translateX(-50vw);
+        }
+        &.animation-off-right {
+            transform: translateX(100vw);
+            visibility: hidden;
+        }
+        &.animation-off-left {
+            transform: translateX(-100vw);
+            visibility: hidden;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
 
 .video-overlay {
     position: absolute;
