--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,32 +10,41 @@ html {
     font-family: 'Saira', sans-serif;
 }
 
+header {
+    height: 100vh;
+}
+
 .container-home {
     background: $yellow;
-    height: 100vh;
     max-height: 1080px;
     width: 100%;
     display: grid;
-    grid-template-rows: 1.35fr repeat(8, 1fr);
+    grid-template-rows: 1.25fr repeat(8, 1fr);
     grid-template-columns: repeat(6, 1fr);
 }
 
 .platform-select {
     grid-column: 1 / span 6;
-    grid-row: 2/3;
+    grid-row: 2/span 4;
+    height: 6rem;
     //background-color: black;
     display: flex;
     justify-content: center;
     position: relative;
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     .platform {
         width: 8rem;
+        display: flex;
+        flex-direction: column-reverse;
         position: absolute;
         height: 100%;
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
+        background-position-y: 45%;
+        transform: scale(.9);
         &.ps4 {
             background-image: url('../../Design\ Assets/logo-ps4.svg');
         }
@@ -48,9 +57,15 @@ html {
         }
         &.animation-enter {
             transform: translateX(50vw);
+            &:before, &:after {
+                display: none;
+            }
         }
         &.animation-exit {
             transform: translateX(-50vw);
+            &:before, &:after {
+                display: none;
+            }
         }
         &.animation-off-right {
             transform: translateX(100vw);
@@ -60,9 +75,138 @@ html {
             transform: translateX(-100vw);
             visibility: hidden;
         }
+        &:before, &:after {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 20px;
+            top: 0px;
+            background-image: radial-gradient(circle at center, $red 1px, transparent 3px), radial-gradient(circle at center, $red 1px, transparent 3px);
+            padding: -0.25rem;
+            background-size: 20px 20px;
+            background-position: top center, bottom center;
+            background-repeat: no-repeat;
+        }
+        &:before {
+            left: -1.5rem;
+        }
+        &:after {
+            right: -1.5rem;
+        }
+    }
+    .platform-animation {
+        position: absolute;
+        bottom: 3px;
+        height: 0.5rem;
+        width: 7rem;
+        transform: translateY(-7px) scaleY(.7);
+        overflow: hidden;
+        &:before, &:after {
+            content: '';
+            background-image: url('../../Design\ Assets/detail-header-bottom-red.svg');
+            background-repeat: no-repeat;
+            transform: scaleX(1.5);
+            width: 4rem;
+            height: 100%;
+            position: absolute;
+        }
+        &:before {
+            transform: rotateY(180deg) translateX(-8%) rotateX(180deg);
+            background-position-x: -19%
+        }
+        &:after {
+            transform: translateX(71%) rotateX(180deg);
+            background-position-x: -20%
+        }
     }
 }
 
+.platform-counter {
+    grid-column: 3 / span 2;
+    grid-row: 3;
+    margin-top: 1.5rem;
+    height: 1rem;
+    display: flex;
+    justify-content: space-between;
+    button {
+        border: none;
+        outline: none;
+        background-image: url('../../Design\ Assets/icon-arrow-select.svg');
+        background-color: transparent;
+        background-repeat: no-repeat;
+        &.previous-slide {
+            transform: rotate(90deg);
+        }
+        &.next-slide {
+            transform: rotate(-90deg);
+        }
+    }
+    .slide-counter {
+        color: $red;
+        font-size: 0.875rem;
+        text-shadow: 0px 0px 4px rgba(254,0,60,0.5);
+        font-weight: 700;
+        opacity: 0.7;
+    }
+}
+
+.hero-container {
+    grid-column: 1 / span 7;
+    grid-row: 3/7;
+    margin-top: 3.75rem;
+    height: 40vh;
+    position: relative;
+}
+
+.trailer {
+    overflow: hidden;
+    margin-left: 4.5rem;
+    height: 100%;
+    position: relative;
+    filter: brightness(0.8) hue-rotate(113deg);
+    img {
+        object-fit: cover;
+        height: 100%;
+        top: 0;
+        position: absolute;
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: url('../../Design\ Assets/hero-overlay.png');
+        mix-blend-mode: color-dodge;
+        opacity: 1;
+        background-size: 100%;
+        height: 40rem;
+        width: 100%;
+    }
+}
+
+i {
+    position: absolute;
+    left: -4px;
+    bottom: -4px;
+    width: 0;
+    height: 0;
+    border-color:  transparent  transparent transparent $yellow ;
+    border-style: solid;
+    border-width: 60px 0 0 60px;
+    z-index: 5;
+    margin-left: 4.5rem;
+}
+.hero {
+    position: absolute;
+    z-index: 3;
+    top: -32px;
+    left: -20px;
+    object-fit: cover;
+    object-position: left;
+    height: 110%;
+    width: 100%;
+    transform-origin: bottom;
+    transform: scale(1.05)
+}
 
 
 
