--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -1,7 +1,7 @@
 .sm-links {
     position: fixed; 
     justify-content: space-evenly;
-    bottom: 2rem;
+    top: 79vh;
     left: 1rem;
     display: flex;
     flex-direction: column;
