--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,11 +16,19 @@ header {
 
 .container-home {
     background: $yellow;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     max-height: 1080px;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-rows: repeat(8, 1fr) .5fr;
     grid-template-columns: repeat(6, 1fr);
+    overflow: hidden;
+    &.animation-enter {
+        display: absolute;
+        top: 0;
+        display: none;
+    }
 }
 
 .platform-select {
@@ -121,10 +129,16 @@ header {
     }
 }
 
-.platform-counter {
+.platform-counter, .hero-counter {
+    &.platform-counter {
+        grid-row: 3; 
+        margin-top: 1.25rem;
+    }
+    &.hero-counter {
+        grid-row: 8;
+        margin-top: -0.5rem;
+    }
     grid-column: 3 / span 2;
-    grid-row: 3;
-    margin-top: 1.25rem;
     height: 1rem;
     display: flex;
     justify-content: space-between;
@@ -159,14 +173,13 @@ header {
     margin-top: 3.75rem;
     height: 40vh;
     position: relative;
-    overflow: hidden;
 }
 
 .hero-text  {
     position: absolute;
-    font-size: 11rem;
+    font-size: 8rem;
     white-space: nowrap;
-    left: -4rem;
+    left: -1rem;
     top: 6rem;
     .zero, .seven, .seven-2 {
         opacity: 0.5;
@@ -222,11 +235,10 @@ header {
     position: absolute;
     z-index: 3;
     top: -32px;
-    left: -20px;
-    object-fit: cover;
+    left: -13px;
+    object-fit: contain;
     object-position: left;
     height: 110%;
-    width: 100%;
     transform-origin: bottom;
     transform: scale(1.05)
 }
@@ -250,14 +262,14 @@ header {
         transform: rotateZ(-90deg);
         z-index: 2;
         top: 2rem;
-        left: .5rem;
+        left: .25rem;
     }
 }
 
-i {
+.hero-container i {
     position: absolute;
-    left: -4px;
-    bottom: -4px;
+    left: -1rem;
+    bottom: -.25rem;
     width: 0;
     height: 0;
     border-color:  transparent  transparent transparent $yellow ;
@@ -268,9 +280,95 @@ i {
 }
 
 
+.button-container-home {
+    display: flex;
+    position: absolute;
+    grid-row: 5;
+    bottom: 3rem;
+    z-index: 101;
+    justify-content: center;
+    width: 100%;
+    transform: translateX(-2%) scale(0.9);
+    button {
+        outline: none;
+        border: none;
+        background-color: transparent;
+        background-size: 100%;
+        width: 11rem;
+        background-repeat: no-repeat;
+        font-size: .75rem;
+        font-weight: 700;
+        color: $yellow;
+        text-transform: uppercase;
+        height: 2.5rem;
+        padding-top: 2px;
+    }
+    .pre-order {
+        background-image: url('../../Design\ Assets/button-solid-red.svg');
+        transform: translateX(10%);
+        z-index: 2;
+        padding-left: 15px;
+    }
 
+    .watch-trailer {
+        background-image: url('../../Design\ Assets/button-outline-yellow.svg');
+        transform: translateX(-10%) scaleX(1.1);
+        z-index: 1;
+        padding-left: 20px;
+    }
+}
 
+.next-hero-preview {
+    background-image: url('../../Design Assets/hero-2-preview.png');
+    height: 5rem;
+    grid-column: 2/span 4;
+    grid-row: 7;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: -1.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 101;
+    text-align: center;
+    padding-right: 5rem;
+    font-size: 2rem;
+    position: relative;
+}
 
+.scroll-indicator {
+    grid-row-end: 9;
+    grid-column: 3/5;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    div {
+        background-color: $black;
+        margin-top: 0.5rem;
+        height: 0.3rem;
+        width: 0.3rem;
+        border-radius: 5px;
+        &:first-child {
+            opacity: 0.33;
+        }
+        &:nth-child(2){
+            opacity: 0.66;
+        }
+    }
+}
+
+.share-btn-mobile {
+    grid-row-end: 9;
+    grid-column: 6;
+    background-image: url('../../Design\ Assets/share-button.svg');
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position-y: 100%;
+    background-position-x: 100%;
+    margin-right: 1rem;
+}
 
 
 
