--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,6 +3,7 @@ nav {
     width: 100%;
     padding: 1rem;
     top: 1rem;
+    z-index: 999;
     img {
         width: 10rem;
         height: auto;
