--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 @import "./variables";
-@import "./navbar";
+//@import "./navbar";
 @import "./sidebar";
 
 * {
@@ -24,6 +24,10 @@ p {
     font-size: 0.75rem;
     letter-spacing: 1px;
     line-height: 1.5rem;
+}
+
+button {
+    cursor: pointer;
 }
 
 header {
@@ -149,6 +153,7 @@ header {
     max-width: 100vw;
     overflow-x: hidden;
     overflow-y: visible;
+    z-index: 5;
     .platform {
         width: 8rem;
         display: flex;
@@ -160,6 +165,7 @@ header {
         background-position: center;
         background-position-y: 45%;
         transform: scale(.9);
+        cursor: pointer;
         &.ps4 {
             background-image: url('../../Design\ Assets/logo-ps4.svg');
         }
@@ -459,8 +465,6 @@ header {
 .next-hero-preview {
     background-image: url('../../Design Assets/hero-2-preview.png');
     height: 5rem;
-    grid-column: 2/span 4;
-    grid-row: 7;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -473,33 +477,35 @@ header {
     padding-right: 5rem;
     font-size: 2rem;
     position: relative;
+    cursor: pointer;
 }
 
 .scroll-indicator {
     position: fixed;
     z-index: 999;
     bottom: 5.2631%;
-    filter: invert(1);
     left: 50%;
     transform: translateX(-100%);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    cursor: pointer;
     div {
-        background-color: $black;
+        background-image: url('../../Design\ Assets/small-circle.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
         margin-top: 0.5rem;
-        height: 0.3rem;
-        width: 0.3rem;
-        border-radius: 5px;
+        height: 0.4rem;
+        width: 0.4rem;
         //animation: pulse 1.3s alternate infinite linear;
         &:first-child {
-            opacity: 0.33;
+            opacity: 0.25;
             animation-delay: .1;
             //visibility: hidden;
         }
         &:nth-child(2){
-            opacity: 0.66;
+            opacity: 0.50;
             animation-delay: 0.2s;
             //visibility: hidden;
         }
@@ -516,13 +522,14 @@ header {
     right: 1rem;
     width: 2rem;
     height: 2rem;
-    background-image: url('../../Design\ Assets/share-button-yellow.svg');
+    background-image: url('../../Design\ Assets/share-button-black.svg');
     background-size: 1rem;
     background-repeat: no-repeat;
     background-position-y: 100%;
     background-position-x: 100%;
     margin-right: 1rem;
     z-index: 999;
+    cursor: pointer;
 }
 
 .video-overlay {
@@ -1084,6 +1091,7 @@ li.dexter, li.jackie, li.johnny {
     }
 }
 
+
 //************************************************************
 //***************>>>>><<<<<********************************
 //**************>>>>>><<<<<<****************************
@@ -1095,6 +1103,7 @@ li.dexter, li.jackie, li.johnny {
 //**************>>>>>><<<<<<*******
 //***************>>>>><<<<<****
 //*************************
+
 
 @media screen and (min-width: 768px) {
 
@@ -1243,4 +1252,213 @@ li.dexter, li.jackie, li.johnny {
             right: 0.5rem;
         }
     }
+}
+
+
+//***********************************************************
+//*************** <<<<<|>>>>> ******************************
+//************** <<<<<|||>>>>> **************************
+//************* <<<<<|||||>>>>> **********************
+//************ <<<<<|||||||>>>>> ******************
+//*********** <<<<<<DESKTOP>>>>>> **************
+//************ <<<<<|||||||>>>>> ************
+//************* <<<<<|||||>>>>> **********
+//************** <<<<<|||>>>>> ********
+//*************** <<<<<|>>>>> ******
+//*******************************
+
+
+@media screen and (min-width: 1024px) {
+    .centering-div {
+        margin: -1rem auto 0 30%;
+    }
+
+    .hero {
+        height: 52rem;
+        top: -14rem;
+        left: -13rem;
+        transform: translateY(-2px);
+        content:url("../../Design\ Assets/hero-fullscreen.png");
+    }
+    
+    .trailer-container {
+        top: -9rem;
+        margin-left: 3.75rem;
+        height: 47rem;
+        width: 70vw;
+    }
+
+    .hero-container {
+        height: 23rem;
+    }
+
+    .hero-container i {
+        bottom: 10rem;
+        transform: scale(2);
+        left: 1rem;
+    }
+
+    .trailer-border {
+        &:before {
+            height: 2rem;
+            width: 40rem;
+            top: -10rem;
+            left: -8rem;
+        }
+        &:after {
+            width: 40rem;
+            height: 2rem;
+            top: -3rem;
+            left: -16.5rem;
+        }
+    }
+
+    .hero-text {
+        font-size: 21rem;
+        left: -21rem;
+        top: 6rem;
+        span {
+            margin-right: 8rem;
+        }
+    }
+
+    .platform-select {
+        grid-row: 3 / span 4;
+        grid-column: 4 /span 4;
+        margin-top: -2rem;
+        margin-left: 4rem;
+        filter: invert(1);
+        transform: scale(0.9);
+        &:before {
+            content: "Select Platform";
+            text-transform: uppercase;
+            position: absolute;
+            left: 5rem;
+            top: 50%;
+            transform: translateY(-50%);
+            font-weight: 700;
+            opacity: 0.7;
+        }
+        &:after {
+            content: '';
+            position: absolute;
+            height: 1px;
+            width: 6.5vw;
+            background-color: black;
+            opacity: 0.7;
+            top: 49%;
+            left: 15rem;
+        }
+        .platform:before, .platform:after {
+            filter: invert(1);
+        }
+        .platform-animation {
+            filter: invert(1);
+        }
+        .platform {
+            &.xbox {
+                margin-left: 0.5rem;
+            }
+            &.pc {
+                background-size: 2rem;
+            }
+            &.animation-enter {
+                transform: translateX(8vw);
+            }
+            &.animation-off-right {
+                transform: translateX(16vw);
+                visibility: visible;
+            }
+        }
+    }
+    @media screen and (max-width: 1825px) {
+        .platform-select:after {
+            width: 5.5vw;
+        }
+    }
+    @media screen and (max-width: 1752px) {
+        .platform-select:after {
+            width: 4.2vw;
+        }
+    }
+    @media screen and (max-width: 1552px) {
+        .platform-select:after {
+            width: 2.2vw;
+        }
+    }
+
+    .button-container-home {
+        transform: translateX(-15%) scale(1.5) translateY(4.5rem);
+    }
+
+    .trailer-container {
+        img {
+            display: none;
+        }
+        &:after {
+            content: '';
+            background-image: url('../../Design\ Assets/background-filter-blank-square-67.png');
+            background-repeat: inherit;
+            background-size: 50%;
+            min-height: 100%;
+            min-width: 100%;
+            position: absolute;
+        }
+    }
+
+    .next-hero-preview {
+        position: absolute;
+        right: 6rem;
+        bottom: -11rem;
+        transform: scale(2);
+    }
+
+    .hero-divider {
+        width: 5rem;
+        position: absolute;
+        background-image: url('../../Design Assets/detail-header-bottom-red.svg');
+        background-size: contain;
+        height: 1rem;
+        background-repeat: no-repeat;
+        display: block;
+        transform-origin: 0% 0%;
+        bottom: -4.25rem;
+        right: 27rem;
+        transform: scaleX(1.25) scaleY(1);
+        margin: .5rem 0;
+        filter: brightness(0.85);
+        opacity: 0.6;
+        z-index: 10;
+        &:after {
+            content: '';
+            height: 2px;
+            width: 13rem;
+            transform: translateY(-11px) translateX(8px);
+            background-color: $red;
+            display: inline-block;
+        }
+    }
+
+    header .container-home .hero-counter {
+        grid-row: 7;
+        grid-column: 5/6;
+        margin-left: -3.5rem;
+        button {
+            filter: invert(1);
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
