Desktop layout for about, trailer, and characters

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -33,7 +33,7 @@
         }
         &:hover {
             filter: brightness(2) saturate(0);
-            transform: scale(1.25);
+            //transform: scale(1.25);
             transition: all 0.1s;
         }
     }
